# arbsego

./: .gitmodules  CHANGELOG.md  Cargo.toml
.github/workflows/: rust.yaml
src/: file.rs  file_type.rs  languages.rs  lib.rs  lint.rs  main.rs  match.rs  options.rs  pattern.rs  run.rs  run_result.rs
src/lints/: apt_call.rs  current_dir.rs  mod.rs
src/patterns/: apt_call.rs  current_dir.rs  mod.rs  rust_comment_line_ignore.rs
