[package]
name = "arbsego"
version = "0.2.0"
edition = "2021"


[dependencies]
clap = { version = "3.1.6", features = ["derive"] }

log = "0.4.16"
env_logger = "0.9.0"

walkdir = "2.3.2"

tree-sitter = "0.19"
tree-sitter-bash = "0.19.0"
tree-sitter-rust = "0.19.0"

lazy_static = "1.4.0"

[build-dependencies]
cc="*"

[dev-dependencies]
test-case = "2.0.2"
